basic functionality and documentation
